lab1/Test/L1-A-1-72.output
Error Type B at Line 10
Error Type B at Line 24
Error Type B at Line 24
Error Type B at Line 31
Error Type B at Line 38
