lab1/Test/L1-A-1-72.cmm
float sJe_Ve65n_NsBWoX ( ) {
  struct yKVi di5RfMl8vmjh9W = - 2024493182.686100506 
    + - Z9BOPA / TF3Wak + OM6W9Wfr8V8i ( ) - ! ZUmeK0687eIrcZE4m 
    / I * Z3BjiKu8rp3zviGoXpMm / jSC6ywC8 - eoj5RV . jDSFJFpkn1S 
    * evc_CMFW5zs_m * d9hCiZXMTNJV / N + ! Ju4J / QQ * 
    G7eD4 * CabmVppP34kJDiOorlSx + - AIGiwoGDjN8B - - 
    Mf4OSGQ * wnkDV9YVAj6gGspXZfr * djtJ1EcqGCXkAOOb != 
    ! n * n93EOr2CxRbJ / HlxEM8nqejF3nTnEBd >= 1246058439 
    - l - Op_equqU != ! aLurh9JmVEYivYrDO / bEmG * sGSuhW7MA2ali1HmEmN 
    / YYr1wgPSBs7BUeEeI4q - b_LeQ - PvOscEjdvEAoxg > [ 
    Q2juE ( NS_3a1xz53RcvRM7v05 ) * kHbMEH + HtjCaMPPo 
    && - jPvPr9pIP7IWu9Kko97v / QheIgcd4f5 / UtQU9hzEY_ 
    / EaH0c2ZAu8jk9 < aO != EQH < EW1dFGMPb == po_q7IkdVgxZ1ex9 
    == DGId >= GJivhkyA5U >= IbXWtCUV4fp8u > HyrRC_ > 
    iMJc > jyHdr1_ < v7gJvCkb3ZuR || - KXBfN2xYkNIpgS 
    / STCR / s != LspWgEkoSb < X8q50 && Augh || - wZpzjo2SEp3 
    - Rqxoa8XHkDkuszsNYd3o >= ptDyEMIrbuZ > Na >= uQVMLImRO 
    == ClN0FnW9dOmlk_AYJwSQ >= mjHQrOU65j3MrDFS6YM != 
    l ;
  int CjhgQsA9TiJ5DGt = ! ms7T ( q4iGqi ) - S + kaUW2DOIlwuA 
    + jnhcw9N9 - mZNynj >= O4KOntI02q2W2STU != R91hIRFKoiyJzD3D 
    > We8kTELFuT4QMUc && iu51goqL1AcJO0 && qiBx ;
}
< int ;== 
struct {
  struct AvSPHXBbBfFXvBG wWuW9gfxhEFnhP [ 1504176250 
    ] [ 1395330205 ] [ 1086505888 ] , vWvzdziiQmN_a_o 
    , _rwHaqsP4aRLD ;
}Z4YRPVeTDTGz0SGlrfV 
;
float HeVR_5imjuMKM0ntz5ZW [ 1179630960 >= ] [ 1941037417 
  ] 
;
float ;
struct lnExnmADuqOSLTF ;
struct {
}o0kywf_ZOM3yZEq ( int D1GzlKaVf ) {
}== 
